--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/serve-static": "^1.0.1",
     "puppeteer": "^1.19.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
