--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "micro-pdf-service",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "0.1-beta",
+  "description": "PDF Microservice based on NestJS",
+  "author": "Valentinos Galanos",
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
