--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-pdf-service",
-  "version": "0.1-beta",
+  "version": "0.1.0",
   "description": "PDF Microservice based on NestJS",
   "author": "Valentinos Galanos",
   "license": "MIT",
@@ -24,10 +24,12 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/serve-static": "^1.0.1",
+    "nodemon": "^2.0.4",
     "puppeteer": "^1.19.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "ts-jest": "^26.1.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
@@ -37,10 +39,8 @@
     "@types/puppeteer": "^1.19.1",
     "@types/supertest": "^2.0.7",
     "jest": "^25.0.0",
-    "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
     "supertest": "^3.4.1",
-    "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
     "tslint": "5.12.1",
